// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleActionsButtons renders correct options for Cloud rule 1`] = `
[
  "Declare incident",
  "Duplicate",
  "Copy link",
  "Delete",
]
`;

exports[`RuleActionsButtons renders correct options for grafana managed rule 1`] = `
[
  "Pause evaluation",
  "Silence notifications",
  "Declare incident",
  "Duplicate",
  "Copy link",
  "Export",
  "Delete",
]
`;

exports[`RuleActionsButtons renders minimal "More" menu when appropriate 1`] = `
[
  "Copy link",
]
`;
